@@ -24,6 +24,7 @@ import scaffold
 from test_pidlockfile import (
     FakeFileDescriptorStringIO,
     setup_pidfile_fixtures,
+    pidlockfile_scenarios,
     )
 from test_daemon import (
     setup_streams_fixtures,
@@ -32,6 +33,11 @@ import daemon.daemon
 
 from daemon import pidlockfile
 from daemon import runner
+
+
+def set_pidlockfile_scenario(testcase, scenario_name):
+    """ Set the PIDLockFile test scenario for the test case. """
+    testcase.pidlockfile_scenario = pidlockfile_scenarios[scenario_name]
 
 
 class Exception_TestCase(scaffold.Exception_TestCase):
@@ -75,12 +81,12 @@ def setup_runner_fixtures(testcase):
         mock_obj=testcase.mock_stderr,
         tracker=testcase.mock_tracker)
 
-    testcase.mock_pidfile_path = tempfile.mktemp()
+    set_pidlockfile_scenario(testcase, 'not-exist')
 
     testcase.mock_pidlockfile = scaffold.Mock(
         "pidlockfile.PIDLockFile",
         tracker=testcase.mock_tracker)
-    testcase.mock_pidlockfile.path = testcase.mock_pidfile_path
+    testcase.mock_pidlockfile.path = testcase.pidlockfile_scenario['path']
 
     scaffold.mock(
         "pidlockfile.PIDLockFile",
@@ -93,7 +99,7 @@ def setup_runner_fixtures(testcase):
             self.stdin_path = testcase.stream_file_paths['stdin']
             self.stdout_path = testcase.stream_file_paths['stdout']
             self.stderr_path = testcase.stream_file_paths['stderr']
-            self.pidfile_path = testcase.mock_pidfile_path
+            self.pidfile_path = testcase.pidlockfile_scenario['path']
 
         run = scaffold.Mock(
             "TestApp.run",
@@ -207,7 +213,7 @@ class DaemonRunner_TestCase(scaffold.TestCase):
 
     def test_creates_pidlockfile(self):
         """ Should create a PIDLockFile with the specified PID file path. """
-        pidfile_path = self.mock_pidfile_path
+        pidfile_path = self.pidlockfile_scenario['path']
         expect_mock_output = """\
             ...
             Called pidlockfile.PIDLockFile(%(pidfile_path)r)
@@ -405,6 +411,7 @@ class DaemonRunner_do_action_start_TestCase(scaffold.TestCase):
 
         self.test_instance.action = 'start'
 
+        set_pidlockfile_scenario(self, 'not-exist')
         self.mock_pidlockfile.is_locked.mock_returns = False
         self.mock_pidlockfile.i_am_locking.mock_returns = False
         self.mock_pidlockfile.read_pid.mock_returns = None
@@ -415,11 +422,12 @@ class DaemonRunner_do_action_start_TestCase(scaffold.TestCase):
 
     def test_raises_error_if_pidfile_locked(self):
         """ Should raise error if PID file is locked. """
+        set_pidlockfile_scenario(self, 'exist-other-pid-locked')
         instance = self.test_instance
         self.mock_pidlockfile.is_locked.mock_returns = True
         self.mock_pidlockfile.i_am_locking.mock_returns = False
         self.mock_pidlockfile.read_pid.mock_returns = self.mock_other_pid
-        pidfile_path = self.mock_pidfile_path
+        pidfile_path = self.pidlockfile_scenario['path']
         expect_error = runner.DaemonRunnerStartFailureError
         expect_message_content = pidfile_path
         try:
@@ -433,11 +441,12 @@ class DaemonRunner_do_action_start_TestCase(scaffold.TestCase):
 
     def test_breaks_lock_if_no_such_process(self):
         """ Should request breaking lock if PID file process is not running. """
+        set_pidlockfile_scenario(self, 'exist-other-pid-locked')
         instance = self.test_instance
         self.mock_pidlockfile.is_locked.mock_returns = True
         self.mock_pidlockfile.i_am_locking.mock_returns = False
         self.mock_pidlockfile.read_pid.mock_returns = self.mock_other_pid
-        pidfile_path = self.mock_pidfile_path
+        pidfile_path = self.pidlockfile_scenario['path']
         test_pid = self.mock_other_pid
         expect_signal = signal.SIG_DFL
         error = OSError(errno.ESRCH, "Not running")
@@ -495,6 +504,7 @@ class DaemonRunner_do_action_stop_TestCase(scaffold.TestCase):
 
         self.test_instance.action = 'stop'
 
+        set_pidlockfile_scenario(self, 'exist-other-pid-locked')
         self.mock_pidlockfile.is_locked.mock_returns = True
         self.mock_pidlockfile.i_am_locking.mock_returns = False
         self.mock_pidlockfile.read_pid.mock_returns = self.mock_other_pid
@@ -505,11 +515,12 @@ class DaemonRunner_do_action_stop_TestCase(scaffold.TestCase):
 
     def test_raises_error_if_pidfile_not_locked(self):
         """ Should raise error if PID file is not locked. """
+        set_pidlockfile_scenario(self, 'not-exist')
         instance = self.test_instance
         self.mock_pidlockfile.is_locked.mock_returns = False
         self.mock_pidlockfile.i_am_locking.mock_returns = False
         self.mock_pidlockfile.read_pid.mock_returns = None
-        pidfile_path = self.mock_pidfile_path
+        pidfile_path = self.pidlockfile_scenario['path']
         expect_error = runner.DaemonRunnerStopFailureError
         expect_message_content = pidfile_path
         try:
@@ -525,7 +536,7 @@ class DaemonRunner_do_action_stop_TestCase(scaffold.TestCase):
     def test_breaks_lock_if_pidfile_stale(self):
         """ Should break lock if PID file is stale. """
         instance = self.test_instance
-        pidfile_path = self.mock_pidfile_path
+        pidfile_path = self.pidlockfile_scenario['path']
         test_pid = self.mock_other_pid
         expect_signal = signal.SIG_DFL
         error = OSError(errno.ESRCH, "Not running")
@@ -555,7 +566,7 @@ class DaemonRunner_do_action_stop_TestCase(scaffold.TestCase):
         """ Should raise error if cannot send signal to daemon process. """
         instance = self.test_instance
         test_pid = self.mock_other_pid
-        pidfile_path = self.mock_pidfile_path
+        pidfile_path = self.pidlockfile_scenario['path']
         error = OSError(errno.EPERM, "Nice try")
         os.kill.mock_raises = error
         expect_error = runner.DaemonRunnerStopFailureError
